--- a/dash-app/assets/references.bib
+++ b/dash-app/assets/references.bib
@@ -9,3 +9,9 @@
   pages   = "10--30"
 }
 
+@inproceedings{lou2023mpm,
+  author = ", Jingjing and Rezvani, Yasaman and Arriojas, Argenis and Degras, David and Keroack, Caroline D. and Duraisingh, Manoj T. and Zarringhalam, Kourosh and Gubbels, Marc-Jan",
+  title = "Single-cell mapping of Toxoplasma gondii’s lytic cycle expression and chromatin accessibility reveals AP2XII-8 as an activator of an essential G1 transition ribosome regulon",
+  journal = "",
+  year = 2023
+}
