Update home page and references

--- a/dash-app/assets/references.bib
+++ b/dash-app/assets/references.bib
@@ -15,3 +15,17 @@
   journal = "",
   year = 2023
 }
+
+@misc{lou2023singlecell_preprint,
+	title = {Single cell expression and chromatin access of the Toxoplasma gondii lytic cycle identifies AP2XII-8 as an essential pivotal controller of a ribosome regulon},
+	copyright = {© 2023, Posted by Cold Spring Harbor Laboratory. This pre-print is available under a Creative Commons License (Attribution-NonCommercial-NoDerivs 4.0 International), CC BY-NC-ND 4.0, as described at http://creativecommons.org/licenses/by-nc-nd/4.0/},
+	url = {https://www.biorxiv.org/content/10.1101/2023.10.06.561197v1},
+	doi = {10.1101/2023.10.06.561197},
+	abstract = {Sequential lytic cycles driven by cascading transcriptional waves underlie pathogenesis in the apicomplexan parasite Toxoplasma gondii. This parasite's unique division by internal budding, short cell cycle, and jumbled up classically defined cell cycle stages have restrained in-depth transcriptional program analysis. Here, unbiased transcriptome and chromatin accessibility maps throughout the lytic cell cycle were established at the single cell level. Correlated pseudo-timeline assemblies of expression and chromatin profiles mapped transcriptional versus chromatin level transition points promoting the cell division cycle. Sequential clustering analysis identified putatively functionally related gene groups facilitating parasite division. Promoter DNA motif mapping revealed patterns of combinatorial regulation. Pseudo-time trajectory analysis revealed transcriptional bursts at different cell cycle points. The dominant burst in G1 was driven by transcription factor AP2XII-8, which engages TGCATGCG/A and TATAAGCCG motifs, and promoted the expression of a regulon encoding 40 ribosomal proteins. Overall, the study provides integrated, multi-level insights into apicomplexan transcriptional regulation.},
+	language = {en},
+	urldate = {2023-10-07},
+	publisher = {bioRxiv},
+	author = {Lou, Jingjing and Rezvani, Yasaman and Arriojas, Argenis and Degras, David and Keroack, Caroline D. and Duraisingh, Manoj and Zarringhalam, Kourosh and Gubbels, Marc-Jan},
+	month = oct,
+	year = {2023}
+}
